DAACS/cli/daacs-cli/build_log.txt
    Checking daacs v2.0.0 (C:\Users\Admin\Desktop\DAACS\CLI\daacs-cli)
error[E0425]: cannot find value `DesignPolishNode` in this scope
   --> src\cli\run.rs:151:49
    |
151 |         .add_node(Phase::DesignPolish, Box::new(DesignPolishNode));
    |                                                 ^^^^^^^^^^^^^^^^ not found in this scope
    |
help: consider importing this unit struct through its public re-export
    |
  3 + use crate::graph::nodes::DesignPolishNode;
    |

error[E0425]: cannot find function `parse_plan` in module `plan_md`
  --> src\graph\nodes\orchestrator_node.rs:98:28
   |
98 |             match plan_md::parse_plan(&plan_path).await {
   |                            ^^^^^^^^^^ not found in `plan_md`

error[E0425]: cannot find function `log_info` in module `crate::logger`
   --> src\graph\nodes\orchestrator_node.rs:133:28
    |
133 |             crate::logger::log_info(&format!("🛠️  Backend Skills: {}", extract_skill_names(skills)));
    |                            ^^^^^^^^ not found in `crate::logger`

error[E0425]: cannot find function `log_info` in module `crate::logger`
   --> src\graph\nodes\orchestrator_node.rs:136:28
    |
136 |             crate::logger::log_info(&format!("🛠️  Frontend Skills: {}", extract_skill_names(skills)));
    |                            ^^^^^^^^ not found in `crate::logger`

error[E0425]: cannot find function `log_info` in module `crate::logger`
  --> src\graph\nodes\design_polish_node.rs:33:28
   |
33 |             crate::logger::log_info("🛠️  Active Skills: ui-ux-pro-max, frontend-design");
   |                            ^^^^^^^^ not found in `crate::logger`

error[E0425]: cannot find function `log_info` in module `crate::logger`
  --> src\graph\nodes\design_polish_node.rs:82:29
   |
82 |              crate::logger::log_info(&format!("Designer Output: {}", response));
   |                             ^^^^^^^^ not found in `crate::logger`

error[E0425]: cannot find function `log_info` in module `crate::logger`
   --> src\agents\developer.rs:142:24
    |
142 |         crate::logger::log_info(&format!("📤  Sending Prompt to LLM: \"{}\"", prompt_preview.replace("\n", " ")));
    |                        ^^^^^^^^ not found in `crate::logger`

error[E0425]: cannot find function `log_info` in module `crate::logger`
   --> src\agents\developer.rs:162:28
    |
162 |             crate::logger::log_info(&format!("📥  Received Response ({} chars): \"{}\"", resp.len(), resp_preview.replace("\n", " ")));
    |                            ^^^^^^^^ not found in `crate::logger`

error[E0425]: cannot find function `log_info` in module `crate::logger`
   --> src\agents\developer.rs:173:28
    |
173 |             crate::logger::log_info(&format!("📥  Received Response (One-Shot, {} chars)", resp.len()));
    |                            ^^^^^^^^ not found in `crate::logger`

warning: unused import: `crate::agents::agent_runtime::AgentRuntime`
 --> src\graph\nodes\documentation_node.rs:5:5
  |
5 | use crate::agents::agent_runtime::AgentRuntime;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused import: `PathBuf`
 --> src\document\review_md.rs:5:23
  |
5 | use std::path::{Path, PathBuf};
  |                       ^^^^^^^

warning: variable does not need to be mutable
   --> src\agents\persistent_session.rs:155:21
    |
155 |                 let mut args = vec![
    |                     ----^^^^
    |                     |
    |                     help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` on by default

For more information about this error, try `rustc --explain E0425`.
warning: `daacs` (lib) generated 3 warnings
error: could not compile `daacs` (lib) due to 9 previous errors; 3 warnings emitted
